--- a/firebase.json
+++ b/firebase.json
@@ -1,8 +1,8 @@
 {
   "functions": [
     {
-      "source": "funcs",
-      "codebase": "funcs",
+      "source": "functions",
+      "codebase": "functions",
       "ignore": [
         "node_modules",
         ".git",
