--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,9 @@
     "@types/express": "^4.17.18",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.7.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.4.0",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
     "multer": "^1.4.5-lts.1"
