--- a/functions/package.json
+++ b/functions/package.json
@@ -15,23 +15,24 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "@types/express": "^4.17.18",
-    "@types/multer": "^1.4.7",
     "@types/node": "^20.7.0",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.4.0",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1",
-    "multer": "^1.4.5-lts.1"
+    "firebase-functions": "^4.3.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.3",
+    "@types/express": "^4.17.18",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "private": true
