--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,7 @@
     "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
-    "start": "npm run shell",
+    "start": "node lib/index.js",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
@@ -22,7 +22,8 @@
     "express": "^4.18.2",
     "firebase": "^10.4.0",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "mongodb": "^6.3.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.3",
