--- a/functions/docker-compose.yaml
+++ b/functions/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
       - "27017:27017"
     volumes:
       - mongo-data-1:/data/db
+      - ./scripts/mongo_data:/scripts/mongo_data
+
     healthcheck:
       test: echo 'db.runCommand("ping").ok' | mongo localhost:27017/test --quiet
       interval: 2s
@@ -22,6 +24,8 @@ services:
     depends_on:
       - mongo
     restart: always
+    volumes:
+      - ./public:/func/public
 
 volumes:
   mongo-data-1:
